# PiPInstaller-MCDR

./: .gitignore  AGENTS.md  README.md  USAGE.md  check.py  gitrepo.toml  mcdreforged.plugin.json  pyproject.toml  requirements.txt
.github/scripts/: get_link.py
.github/workflows/: ci.yml  release.yml
doc/: CHANGELOG.md  RELEASE.md
pip_installer/: __init__.py
src/: mcdreforged.plugin.json  requirements.txt
src/pip_installer/: __init__.py  commands.py  config.py  core.py  runtime.py
