[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipinstaller-mcdr"
dynamic = ["version"]
description = "Install Python dependencies in MCDR console."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcdreforged>=2.1.0",
]

[tool.ruff]
line-length = 79

[tool.hatch.version]
source = "regex"
path = "src/mcdreforged.plugin.json"
pattern = "\"version\"\\s*:\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["src/pip_installer"]